--- a/Front-end/src/pages/cadastro.css
+++ b/Front-end/src/pages/cadastro.css
@@ -61,10 +61,10 @@ button:hover {
   background-color: #c1bdbb;
 }
 .logo1 {
-  width: 20%;
+  width: 10000px;
   max-width: 150px;
   height: auto;    
   object-fit: cover;
-  margin-top: 2px;
+  margin-top: 10px;
 }
 
