--- a/Front-end/src/componentes/NavBar.css
+++ b/Front-end/src/componentes/NavBar.css
@@ -1,19 +1,28 @@
 .navbar {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+  width: 100%; 
+  margin: 0 auto;
   background: #f5f3ef;
   padding: 10px 40px;
   box-sizing: border-box;
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1000;
 }
 
 .navbar-top {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
-  gap: 20px;
+  padding: 5px 20px;
+  gap: 10px;
+  width: 100%;
+  max-width: 1200px;
 }
 
 .logo-container {
@@ -23,7 +32,7 @@
   display: flex;                
   align-items: center;
   justify-content: center;
-  overflow: hidden;              
+  overflow: hidden;        
 }
 
 .logo2 {
@@ -33,10 +42,10 @@
   display: block;
 }
 
+
 .search-bar {
   display: flex;
-  flex: 10;
-  margin: 0 30px;
+  flex: 1;
   max-width: 700px;
 }
 
@@ -60,15 +69,19 @@
 .user-actions {
   display: flex;
   align-items: center;
-  gap: 15px;
-  font-size: 15px;
+  gap: 10px;
+  font-size: 14px;
 }
 
+.user-actions svg {
+  font-size: 18px;
+  cursor: pointer;
+}
 
 .navbar-bottom {
   display: flex;
   justify-content: center;
-  margin-top: 10px;
+  margin-top: 5px;
   gap: 100px;
 }
 
@@ -81,15 +94,6 @@
 .user-dropdown {
   position: relative;
   display: inline-block;
-}
-
-.dropdown-button {
-  background: transparent;
-  border: none;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  padding: 0;
 }
 
 .dropdown-menu {
@@ -110,26 +114,6 @@
   display: block;
 }
 
-.dropdown-item:hover {
-  background: #e0dbd5;
+.user-actions {
+  position: relative;
 }
-
-.dropdown-divider {
-  height: 1px;
-  background: #ccc;
-  margin: 5px 0;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
