--- a/Front-end/src/componentes/TelaLoja.css
+++ b/Front-end/src/componentes/TelaLoja.css
@@ -5,6 +5,8 @@ body {
 .tela-loja { 
   padding: 40px 30px;
   border-radius: 12px;
+  padding: 6rem 1rem 3rem; 
+  background-color: #f6f5f4;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
 }
 
